--- a/DoctorsWardrobe/Views/Colors/Index.cshtml
+++ b/DoctorsWardrobe/Views/Colors/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Colors</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Color Family", "Create")
 </p>
 <table class="table">
     <tr>
