--- a/DoctorsWardrobe/Views/NeckWears/Index.cshtml
+++ b/DoctorsWardrobe/Views/NeckWears/Index.cshtml
@@ -4,22 +4,14 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Neckwear</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Neckwear", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Color.ColorFamily)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Occasion.OccasionType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Season.SeasonName)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.NeckWearName)
         </th>
@@ -29,20 +21,21 @@
         <th>
             @Html.DisplayNameFor(model => model.NeckWearType)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Color.ColorFamily)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Occasion.OccasionType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Season.SeasonName)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Color.ColorFamily)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Occasion.OccasionType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Season.SeasonName)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.NeckWearName)
         </td>
@@ -53,6 +46,15 @@
             @Html.DisplayFor(modelItem => item.NeckWearType)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Color.ColorFamily)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Occasion.OccasionType)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Season.SeasonName)
+        </td>
+         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.NeckWearID }) |
             @Html.ActionLink("Details", "Details", new { id=item.NeckWearID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.NeckWearID })
