framework, database, and text complete. Needs images and styling

--- a/DoctorsWardrobe/Views/Home/About.cshtml
+++ b/DoctorsWardrobe/Views/Home/About.cshtml
@@ -4,4 +4,13 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Have you found yourself unexpectedly traveling through time and space in a blue box?</p>
+<p>Perhaps you've woken up and your teeth and kidneys feel...new.</p>
+<p>If so, it may be time for a new look.</p>
+<p></p>
+<h2>How to get to the TARDIS Wardrobe</h2>
+<p>Head out of console room - Take the first left, then the second right.</p>
+<p>Take third left then head straight ahead.</p>
+<p>Go under the stairs. Pass the bins. </p>
+<p>The TARDIS wardrobe is fifth door on the left.</p>
+<p>(Unless she's moved it in the meantime. Be nice. Maybe she'll help you along the way.)</p>
