--- a/DoctorsWardrobe/Views/Shared/_Layout.cshtml
+++ b/DoctorsWardrobe/Views/Shared/_Layout.cshtml
@@ -15,14 +15,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("The Doctor's Wardrobe", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("The TARDIS Wardrobe", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>                    
+                    <li>@Html.ActionLink("Color Options", "Index", "Colors")</li>
+                    <li>@Html.ActionLink("Occasions", "Index", "Occasions")</li>
+                    <li>@Html.ActionLink("Seasons", "Index", "Seasons")</li>
+                    <li>@Html.ActionLink("Contact Developer", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -31,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Karen McEwen - ASP.NET Project</p>
         </footer>
     </div>
 
